Re-formatted the contentCardComponent() to be more dynamic, allowing us to now generate a content-card with sections and subtitles for those sections. This is made like this because this will be a common theme/design pattern that is used for each page of our site. Now we can recycle this function for every page we create. The function takes a parameter of names you want for each section and then generates the sections with those names as sub-titles for the sections, one-by-one in order.
Function, whoAreWeContent(), now adds content to the 'Who Are We' section of the homepage.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -41,8 +41,7 @@ main {
 	gap: $spacings;
 	margin-top: $spacings;
 	margin-bottom: $spacings;
-	padding-top: $spacings;
-	padding-bottom: $spacings;
+	padding: $spacings;
 	width: 60%;
 	height: auto;
 	border: $borders;
