--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -75,3 +75,17 @@ footer {
 li {
 	list-style-type: none;
 }
+
+.contact-container {
+	@include flex-column;
+
+	.img-container {
+		width: 100%;
+		height: 100%;
+		img {
+			width: 100%;
+			max-height: 100%;
+			object-fit: contain;
+		}
+	}
+}
