components.js has been created. This will store functionality we'll need across our site and index.js will be used for rendering and assmebly of these components for our pages. Decided to scrap the crowded-ness of components in the index.js and decided to modularize and be more intentional with my comonents and functions here. NOTE TO SELF: Don't select elements from within components (this entangles us in a system) do the selecting and assemblage of elements outside of components.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -44,7 +44,7 @@ main {
 	@include flex-column;
 }
 
-#content-card {
+.content-card {
 	@include flex-column;
 	@include even-spacings;
 	@include borders;
