Pages now load and render properly. Using a whatPageToLoad() function I can now determine what button in the header is being pressed and apply the logic necessary to remove the previous page components and load the appropriate page components. Tested and working in Brave and FireFox browsers.

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,6 @@
 $spacings: 35px;
 
 @mixin borders {
-	border: solid black 2px;
 	border-radius: 10px;
 }
 
@@ -11,14 +10,21 @@ $spacings: 35px;
 	align-items: center;
 }
 
-@mixin even-spacings {
-	padding: $spacings;
-	margin: $spacings;
-	gap: $spacings;
+@font-face {
+	font-family: "Tombstone";
+	src: url("/src/assets/tombstone-font/Tombstone.otf") format("otf"),
+		url("/src/assets/tombstone-font/Tombstone.ttf") format("ttf");
+}
+
+@font-face {
+	font-family: "Cowboy";
+	src: url("/src/assets/cowboy-font/Cowboys 2.0.otf") format("otf");
 }
 
 body {
+	font-family: "Cowboy";
 	background-color: rgb(160, 160, 255);
+	margin: 0;
 	width: 100vw;
 	height: 100vh;
 	height: auto;
@@ -35,57 +41,71 @@ header {
 	background-color: white;
 	display: flex;
 	justify-content: space-evenly;
-	width: 100vw;
-	height: 10%;
-	@include borders;
-}
+	width: 100%;
+	height: 75px;
 
-main {
-	@include flex-column;
+	button {
+		font-size: 24px;
+		border: none;
+		background-color: white;
+		height: 80%;
+		width: fit-content;
+		padding: 5px;
+		transition: 0.25s;
+		&:hover {
+			font-size: 25px;
+		}
+	}
 }
 
 .content-card {
 	@include flex-column;
-	@include even-spacings;
-	@include borders;
 
-	background-color: white;
-	width: 60%;
-	height: auto;
+	width: 80%;
+	height: 25%;
+	padding: 0;
 
 	section {
 		@include flex-column;
 		@include borders;
-		width: fit-content;
-		padding: 10px;
+		background-color: white;
+
+		width: 100%;
+		padding: 20px;
+		margin-bottom: 50px;
+
+		h3 {
+			margin: 0;
+		}
 	}
 }
 
 footer {
-	@include borders;
+	height: 40px;
+	width: 100%;
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	background-color: white;
 }
 
-.sub-title {
-	color: red;
+.content-title {
+	font-size: 48px;
 }
-
-li {
-	list-style-type: none;
+.sub-title {
+	font-size: 24px;
 }
 
 .contact-container {
 	@include flex-column;
+}
 
-	.img-container {
-		width: 100%;
-		height: 100%;
-		img {
-			width: 100%;
-			max-height: 100%;
-			object-fit: contain;
-		}
+.img-container {
+	width: 100%;
+	height: 100%;
+	img {
+		max-width: 100%;
+		max-height: 100%;
+		object-fit: contain;
 	}
 }
