--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -103,9 +103,13 @@ footer {
 .img-container {
 	width: 100%;
 	height: 100%;
-	img {
-		max-width: 100%;
-		max-height: 100%;
-		object-fit: contain;
-	}
+}
+
+img {
+	max-width: 100%;
+	object-fit: contain;
+}
+
+p {
+	font-size: 24px;
 }
